# Tenzor_test

./: Makefile  README.md  example.py  pyproject.toml
pages/: yandex_image.py  yandex_page.py
tests/: first_test.py  second_test.py
