[tool.poetry]
name = "tenzor-test"
version = "0.1.0"
description = ""
authors = ["LeitoKonor <joltrico96@gmail.com>"]
readme = "README.md"
packages = [{include = "tenzor_test"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
